--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AkashKumar3.github.io/Aarogya-Exercises",
+  "homepage": "/",
   "name": "arogya",
   "version": "0.1.0",
   "private": true,
